# esp-apple-homekit-adk

./: CMakeLists.txt
examples/Lightbulb/main/: app_main.c
fascade/include/: esp_hk.h  esp_hk_db.h
fascade/src/: esp_hk.c  esp_hk_db.c
port/: CMakeLists.txt
port/include/: HAPPlatformBLEPeripheralManager+Init.h
port/src/: HAPPlatformBLEPeripheralManager.c
